--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -39,10 +39,7 @@
 
 					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
 
-					<p class="order-id">Votre numéro de commande est le</p>
-
-					<p class="total-price">/p>Votre commande s'élève à un prix total de <span class="price"></span>
-					</p>
+					<p class="order-id">Votre numéro de commande est le </p>
 				  </article>
 			</div>
 		</main>
@@ -70,11 +67,7 @@
 
 
 		<!-- Scripts JS -->
-		<script src="js/ajax.js"></script>
-	
-	
-	
-		
+		<script src="js/confirmationcommande.js"></script>
 		
     </body>
 </html>
