--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -7,7 +7,7 @@
 		<title>OriPhoto</title>
 		<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
 	</head>
