--- a/mon-panier.html
+++ b/mon-panier.html
@@ -26,14 +26,14 @@
 						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
 					</li>
 					<li class="panier">
-						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
+						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<main>
 			<h2 class="principal bgc">mon panier</h2>
-			<a class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</a>
+			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
 			</p>
 			<section id="panier">
 			<h3 id="panier-total"></h3>
