--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -42,6 +42,7 @@
 					<p class="order-id">Votre numéro de commande est le </p>
 				  </article>
 			</div>
+			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
 		</main>
 		<footer  class="bgc flexbox">
 			<div>
