--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -34,7 +34,7 @@
 		<main>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
 				<article id="confirmation">
-					<h2>Commande validée</h2>
+					<h2 class="principal bgc">Commande validée</h2>
 					<p class="user">Merci pour votre commande</p>
 
 					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
