--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -32,7 +32,7 @@
 			</nav>
 		</header>
 		<main>
-			<h2 class="principal bgc">Commande validée</h2>
+			<h2 class="principal bgc conteneur__demie">Commande validée</h2>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
 				<article id="confirmation">
 					<p class="user">Merci pour votre commande</p>
