--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -26,7 +26,7 @@
 						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
 					</li>
 					<li class="panier">
-						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
+						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
 					</li>
 				</ul>
 			</nav>
@@ -35,11 +35,11 @@
 			<h2 class="principal bgc conteneur__demie">Commande validée</h2>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
 				<article id="confirmation">
-					<p class="user">Merci pour votre commande</p>
+					<p>Merci pour votre commande <span class="user"></span></p>
 
 					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
 
-					<p class="order-id">Votre numéro de commande est le </p>
+					<p>Votre numéro de commande est le <span class="order-id"></span></p>
 				  </article>
 			</div>
 			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
