--- a/mon-panier.html
+++ b/mon-panier.html
@@ -39,6 +39,7 @@
 			</section>
 			<section class="conteneur__demie">
 				<form action="" method="post" name="formulairedecommande">
+					<h3 > Formulaire de commande :</h3>
 					<fieldset>
 						<legend>Votre Adresse :</legend>
 						<div class="souspartie">
