--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -36,7 +36,7 @@
 						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
 					</li>
 					<li class="panier">
-						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i><span id="nombredeproduit">0</span></a>
+						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
 					</li>
 				</ul>
 			</nav>
