--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
 
 	</head>
-	<body>
+	<body class="heigtauto">
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
