--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -11,7 +11,7 @@
 		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Poppins&display=swap" rel="stylesheet">
 	</head>
-	<body class="heigtauto">
+	<body>
 		<header class="bgc">
 			<nav class="flexbox">
 				<ul>
