--- a/mon-panier.html
+++ b/mon-panier.html
@@ -33,7 +33,7 @@
 		</header>
 		<main>
 			<h2 class="principal bgc">mon panier</h2>
-			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil"href="index.html"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
+			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
 			<section id="panier">
 			<h3 id="panier-total"></h3>
 			</section>
