--- a/mon-panier.html
+++ b/mon-panier.html
@@ -67,8 +67,8 @@
 							</div>
 						</div>
 					</fieldset>  
-					<button type="submit" id="envoiformulaire">Valider la commande</button>
-					<button type="reset">Effacer</button>
+					<button type="submit" id="envoiformulaire" class="focus">Valider la commande</button>
+					<button type="reset" class="focus">Effacer</button>
 				</form>
 			</section>
 		</main>
