--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -59,7 +59,7 @@
 					<div class="ficheproduit-contenant__droit">
 						<div class="ficheproduit-contenu">
 							<p id="prixduproduit"></p>
-							<button class="bgc__secondaire btn btn--panier" id="ajoutduproduitaupanier">Ajouter au panier</button>
+							<button class="bgc__secondaire btn btn--panier focus" id="ajoutduproduitaupanier">Ajouter au panier</button>
 						</div>
 					</div>
 				</div>
