--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
 				</div>
 			</div>
 		</main>
-		<footer  class="bgc flexbox">
-			<div>
-				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+		<footer  class="bgc">
+			<div class="flexbox">
+				<div>
+					<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
+				</div>
+				<div>
+					<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
+				</div>
+				<div>
+					<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+				</div>
 			</div>
 		</footer> 
 
