--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -44,25 +44,17 @@
 			</div>
 			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
 		</main>
-		<footer  class="bgc flexbox">
-			<div>
-				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
-			</div>
-		</footer> <footer  class="bgc flexbox">
-			<div>
-				<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
-			</div>
-			<div>
-				<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+		<footer  class="bgc">
+			<div class="flexbox">
+				<div>
+					<a href="index.html" title="Lien vers Twitter"><i class="fa fa-twitter icon-social"></i></a>
+				</div>
+				<div>
+					<a href="index.html" title="Lien vers Facebook"><i class="fa fa-facebook icon-social"></i></a>
+				</div>
+				<div>
+					<a href="index.html" title="Lien vers Instagram"><i class="fa fa-instagram icon-social"></i></a>
+				</div>
 			</div>
 		</footer> 
 
