--- a/mon-panier.html
+++ b/mon-panier.html
@@ -45,22 +45,22 @@
 						<div class="souspartie">
 							<div>
 								<label for="nomclient">Nom *</label>
-								<input type="text" placeholder="Votre nom" id="nomclient"  size="23"  pattern="^\D*$" required name="nomclient">
+								<input type="text" placeholder="Votre nom" id="nomclient"  size="23"  pattern="^\D*$" required name="nomclient" class="focus"><br/>
 
 								<label for="prenomclient">Prénom *</label>
-								<input type="text" placeholder="Votre prénom" id="prenomclient"  size="16" pattern="^\D*$" required name="prenomclient">
+								<input type="text" placeholder="Votre prénom" id="prenomclient"  size="16" pattern="^\D*$" required name="prenomclient" class="focus">
 							</div>
 						</div>
 						<div class="souspartie">
 							<div>
 								<label for="emailclient">Email *</label>
-								<input type="email" placeholder="Votre email" id="emailclient" size="56" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required name="emailclient">
+								<input type="email" placeholder="Votre email" id="emailclient" size="56" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required name="emailclient" class="focus">
 							</div>
 						</div>
 						<div class="souspartie">
 							<div>
 								<label for="adresseclient">Adresse *</label>
-								<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address" size="56" required name="adresseclient"><br/>
+								<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address" size="56" required name="adresseclient"class="focus"><br/>
 					
 								<label for="villeclient">Ville *</label>
 								<input type="text" placeholder="Votre ville" id="villeclient"  size="23" required name="villeclient">
