--- a/mon-panier.html
+++ b/mon-panier.html
@@ -63,7 +63,7 @@
 								<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address" size="56" required name="adresseclient"class="focus"><br/>
 					
 								<label for="villeclient">Ville *</label>
-								<input type="text" placeholder="Votre ville" id="villeclient"  size="23" required name="villeclient">
+								<input type="text" placeholder="Votre ville" id="villeclient"  size="23" required name="villeclient" class="focus">
 							</div>
 						</div>
 					</fieldset>  
