--- a/mon-panier.html
+++ b/mon-panier.html
@@ -33,12 +33,12 @@
 		</header>
 		<main>
 			<h2 class="principal bgc">mon panier</h2>
-			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
+			<button class="btn btn__achat bgc majuscule focus" id="retournersurlacceuil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
 			<section id="panier">
 			<h3 id="panier-total"></h3>
 			</section>
 			<section class="conteneur__demie">
-				<form action="" method="post" name="formulairedecommande">
+				<form method="post" name="formulairedecommande">
 					<h3 > Formulaire de commande :</h3>
 					<fieldset>
 						<legend>Votre Adresse :</legend>
@@ -60,7 +60,7 @@
 						<div class="souspartie">
 							<div>
 								<label for="adresseclient">Adresse *</label>
-								<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address" size="56" required name="adresseclient"class="focus"><br/>
+								<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address focus" size="56" required name="adresseclient"><br/>
 					
 								<label for="villeclient">Ville *</label>
 								<input type="text" placeholder="Votre ville" id="villeclient"  size="23" required name="villeclient" class="focus">
