--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	</head>
 	<body>
 		<header class="bgc">
+			<nav class="flexbox">
+			</nav>
 		</header>
 		<main id="main">
 			<div id="erreur">
