--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
 	<body>
 		<header class="bgc">
 			<nav class="flexbox">
+				<ul>
+					<li>
+						<a href="index.html" class="focus">
+							<h1>
+								<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
+							</h1>
+						</a>
+					</li>
+					<li>
+						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
+					</li>
+					<li>
+						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
+					</li>
+				</ul>
 			</nav>
 		</header>
 		<main id="main">
