--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 	</head>
 	<body>
-		<header class="bgc">
+				<header class="bgc">
 			<nav class="flexbox">
 				<ul>
-					<li>
+					<li class="logo__header">
 						<a href="index.html" class="focus">
 							<h1>
 								<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
@@ -34,7 +34,7 @@
 					<li>
 						<a href="index.html" class="focus">Accueil<i class="fas fa-caret-right"></i></a>
 					</li>
-					<li>
+					<li class="panier">
 						<a href="mon-panier.html" class="focus">Panier<i class="fas fa-shopping-cart"></i></a>
 					</li>
 				</ul>
