--- a/mon-panier.html
+++ b/mon-panier.html
@@ -44,16 +44,16 @@
 					<div class="souspartie">
 						<div>
 							<label for="nomclient">Nom *</label>
-							<input type="text" placeholder="Votre nom" id="nomclient"  size="23"  pattern="^\D*$" required name="nomclient" class="focus"><br/>
+							<input type="text" placeholder="Votre nom" id="nomclient"  pattern="^\D*$" required name="nomclient" class="focus"><br/>
 
 							<label for="prenomclient">Prénom *</label>
-							<input type="text" placeholder="Votre prénom" id="prenomclient"  size="16" pattern="^\D*$" required name="prenomclient" class="focus">
+							<input type="text" placeholder="Votre prénom" id="prenomclient"  pattern="^\D*$" required name="prenomclient" class="focus">
 						</div>
 					</div>
 					<div class="souspartie">
 						<div>
 							<label for="emailclient">Email *</label>
-							<input type="email" placeholder="Votre email" id="emailclient" size="56" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required name="emailclient" class="focus">
+							<input type="email" placeholder="Votre email" id="emailclient" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required name="emailclient" class="focus">
 						</div>
 					</div>
 					<div class="souspartie">
@@ -61,7 +61,7 @@
 							<label for="adresseclient">Adresse *</label>
 							<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address focus" size="56" required name="adresseclient"><br/>
 							<label for="villeclient">Ville *</label>
-							<input type="text" placeholder="Votre ville" id="villeclient"  size="23" required name="villeclient" class="focus">
+							<input type="text" placeholder="Votre ville" id="villeclient"  required name="villeclient" class="focus">
 						</div>
 					</div>
 					<button type="submit" id="envoiformulaire" class="focus">Valider la commande</button>
