--- a/mon-panier.html
+++ b/mon-panier.html
@@ -59,7 +59,7 @@
 					<div class="souspartie">
 						<div>
 							<label for="adresseclient">Adresse *</label>
-							<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address focus" size="56" required name="adresseclient"><br/>
+							<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address focus" required name="adresseclient"><br/>
 							<label for="villeclient">Ville *</label>
 							<input type="text" placeholder="Votre ville" id="villeclient"  required name="villeclient" class="focus">
 						</div>
