--- a/mon-panier.html
+++ b/mon-panier.html
@@ -45,7 +45,8 @@
 						<div>
 							<label for="nomclient">Nom *</label>
 							<input type="text" placeholder="Votre nom" id="nomclient"  pattern="^\D*$" required name="nomclient" class="focus"><br/>
-
+						</div>
+						<div>
 							<label for="prenomclient">Prénom *</label>
 							<input type="text" placeholder="Votre prénom" id="prenomclient"  pattern="^\D*$" required name="prenomclient" class="focus">
 						</div>
@@ -60,6 +61,8 @@
 						<div>
 							<label for="adresseclient">Adresse *</label>
 							<input type="text" placeholder="Votre adresse postale" id="adresseclient" class="address focus" required name="adresseclient"><br/>
+						</div>
+						<div>
 							<label for="villeclient">Ville *</label>
 							<input type="text" placeholder="Votre ville" id="villeclient"  required name="villeclient" class="focus">
 						</div>
