--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
-	<title>OriPhoto</title>
+	<title></title>
 	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
