--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -63,7 +63,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="produitdanspanier" >Le produit a été ajouté au panier !</div>
+				<div id="produitdanspanier" style="display:none;">Le produit a été ajouté au panier !</div>
 			</section>
 			<div id="erreur">
 				<div class="conteneur__erreur">
