--- a/mon-panier.html
+++ b/mon-panier.html
@@ -16,7 +16,7 @@
 			<nav class="flexbox">
 				<ul>
 					<li class="logo__header">
-						<a href="index.html" class="focus">
+						<a href="index.html" class="h1 focus">
 							<h1>
 								<img class="logo" src="img/oriphoto-logo.png" alt="Logo d'Oriphoto"/>riPhoto
 							</h1>
