--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<title>OriPhoto</title>
+		<title>Confirmation de commande OriPhoto</title>
 		<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 
 		<link rel="stylesheet" href="css/style.css">
