--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
-	<title>Fiche du produit</title>
+	<title>Fiche produit, appareil photo vintage OriPhoto</title>
 	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
@@ -13,7 +13,7 @@
 	<meta property="og:title" content="OriPhoto"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="http://www.oriphoto.fr/"/>
-	<meta property="og:image" content="https://i.imgur.com/nLTiPMv.png"/>
+	<meta property="og:image" content="https://i.imgur.com/GeOwnHS.jpg"/>
 	<meta property="og:description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages"/>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
