--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:title" content="OriPhoto"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="http://www.oriphoto.fr/"/>
-		<meta property="og:image" content="https://i.imgur.com/nLTiPMv.png"/>
+		<meta property="og:image" content="https://i.imgur.com/GeOwnHS.jpg"/>
 		<meta property="og:description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages"/>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
