--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<title>Confirmation de commande OriPhoto</title>
-		<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
+		<meta name="description" content="Confirmation de commande d'appareil photo vintage chez OriPhoto">
 
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/9376b337f5.js" crossorigin="anonymous"></script>
