--- a/fiche-produit.html
+++ b/fiche-produit.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<link rel="shortcut icon" type="image/png" href="img/oriphoto-favicon.png">
 	<title>Fiche produit, appareil photo vintage OriPhoto</title>
-	<meta name="description" content="OriPhoto est une filiale de ORINOCO, site de vente en ligne, qui vend des appareils photo vintages">
+	<meta name="description" content="Fiche produit d'un appareil photo vintage OriPhoto">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	
