--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -42,7 +42,7 @@
 					<p>Votre numéro de commande est le <span class="order-id"></span></p>
 				  </article>
 			</div>
-			<button class="btn btn__achat bgc majuscule focus"id="retournersurlacceuil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner sur l'acceuil</button>
+			<button class="btn btn__achat bgc majuscule focus"id="retourneralaccueil" onclick="window.location.href='index.html';"><i class="fas fa-caret-left"></i>retourner à l'accueil</button>
 		</main>
 		<footer  class="bgc">
 			<div class="flexbox">
