--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -35,7 +35,9 @@
 			<h2 class="principal bgc conteneur__demie">Commande validée</h2>
 			<div id="confirmationdecommande"class="conteneur__bleu conteneur__demie">
 				<article id="confirmation">
-					<p>Merci pour votre commande <span class="user"></span></p>
+                    <p>Merci pour votre commande <span class="user"></span></p>
+                    
+                    <p>Son montant s'élève à un total de <span class="price"></span></p>
 
 					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
 
