--- a/confirmation-de-commande.html
+++ b/confirmation-de-commande.html
@@ -37,7 +37,7 @@
 				<article id="confirmation">
                     <p>Merci pour votre commande <span class="user"></span></p>
                     
-                    <p>Son montant s'élève à un total de <span class="price"></span></p>
+                    <p>Son montant s'élève à un total de <span class="price"></span>€</p>
 
 					<p>Nous l'avons reçu et la traiterons dans les plus brefs délais.</p>
 
